--- a/package.json
+++ b/package.json
@@ -6,12 +6,25 @@
   "scripts": {
     "start": "node dist/main.js",
     "dev": "ts-node -T src/main.tsx",
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "lint": "npx eslint 'src/**'"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
+    "eslint": "^8.13.0",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint-config-airbnb": "^19.0.0",
+    "eslint-config-next": "12.0.10",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import-newlines": "^1.1.5",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-unused-imports": "^2.0.0"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
