--- a/package.json
+++ b/package.json
@@ -5,31 +5,31 @@
   "license": "MIT",
   "scripts": {
     "start": "node dist/main.js",
-    "dev": "ts-node -T src/main.tsx",
+    "dev": "nodemon -e ts,tsx,js,jsx --watch src --exec 'ts-node -T src/main.tsx'",
     "build": "npx tsc",
     "lint": "npx eslint 'src/**'"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
-    "eslint": "^8.13.0",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.3",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.13.0",
     "eslint-config-airbnb": "^19.0.0",
-    "eslint-config-next": "12.0.10",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-import-newlines": "^1.1.5",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-unused-imports": "^2.0.0"
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
-    "@types/react": "^18.0.3",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.1",
     "express": "^4.17.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
