--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,6 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,        
     "skipLibCheck": true,
-    "outDir": "dist",
-    "types": [ "react-dom/next" ]
+    "outDir": "dist"
   }
 }
