--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "npx eslint 'src/**'"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.2",
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "esbuild": "^0.14.36",
     "eslint": "^8.13.0",
     "eslint-config-airbnb": "^19.0.0",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -23,16 +25,23 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "nodemon": "^2.0.15",
+    "rollup": "^2.70.2",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "vite": "^2.9.5"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "@types/react-router": "^5.1.18",
+    "@types/react-router-dom": "^5.3.3",
+    "compression": "^1.7.4",
     "express": "^4.17.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "swc": "^1.0.11"
   }
 }
